# kiku

./: .gitignore  .keisaku.json  LICENSE  README.md  kiku-seed.md  pyproject.toml
devlog/: ho-00-overview.md
examples/: sample-conversation.md  sample-output.md
metadata/: description.md
profiles/examples/: caretaking.yaml  overshoot-recognition.yaml
src/kiku/: __init__.py  cli.py  extractor.py  formatter.py  parser.py  preprocessor.py  profile.py
src/kiku/backends/: __init__.py  anthropic_backend.py  openai_compat.py
src/kiku/parsers/: __init__.py  anthropic.py  block.py  claude_markdown.py
tests/: test_anthropic_parser.py  test_backends.py  test_cli.py  test_extractor.py  test_formatter.py  test_parser.py  test_preprocessor.py  test_profile.py
tests/fixtures/: anthropic_synthetic.json
